--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_bloc: ^8.1.3
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
